cmake_minimum_required(VERSION 3.13)
set(CMAKE_VERBOSE_MAKEFILE ON)

#add_library(mcufont mf_encoding.c mf_font.c mf_justify.c mf_kerning.c mf_rlefont.c mf_bwfont.c mf_scaledfont.c mf_wordwrap.cDejaVuSans12.c DejaVuSans12bw_bwfont.c DejaVuSans12bw.c DejaVuSerif16.c DejaVuSerif32.c fixed_5x8.c fixed_7x14.c fixed_10x20.c)

# target_include_directories(mcufont PUBLIC "${PROJECT_SOURCE_DIR}/mcufont/include")


#./decoder/mf_encoding.c 
#./decoder/mf_font.c 
#./decoder/mf_justify.c 
#./decoder/mf_kerning.c 
#./decoder/mf_rlefont.c 
#./decoder/mf_bwfont.c 
#./decoder/mf_scaledfont.c 
#./decoder/mf_wordwrap.c 

#./fonts/DejaVuSans12.c 
#./fonts/DejaVuSans12bw_bwfont.c 
#./fonts/DejaVuSans12bw.c 
#./fonts/DejaVuSerif16.c 
#./fonts/DejaVuSerif32.c 
#./fonts/fixed_5x8.c 
#./fonts/fixed_7x14.c 
#./fonts/fixed_10x20.c